version main principal con todos los cambios aplicados