@@ -1,8 +1,10 @@
 package com.idee.controlescolar.config;
 
 import com.idee.controlescolar.security.JwtAuthenticationFilter;
+import com.idee.controlescolar.security.LoginRateLimitFilter;
 import com.idee.controlescolar.service.UsuarioService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -11,6 +13,7 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.core.GrantedAuthorityDefaults; // IMPORTANTE
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -18,8 +21,11 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.http.HttpMethod;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
@@ -29,6 +35,10 @@ public class SecurityConfig {
 
     private final UsuarioService usuarioService;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final LoginRateLimitFilter loginRateLimitFilter;
+
+    @Value("${cors.allowed-origins:http://localhost:5500,http://127.0.0.1:5500,http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173,http://127.0.0.1:5173}")
+    private String corsAllowedOrigins;
 
     @Bean
     public DaoAuthenticationProvider authenticationProvider(PasswordEncoder passwordEncoder) {
@@ -43,20 +53,38 @@ public class SecurityConfig {
         return authConfig.getAuthenticationManager();
     }
 
+    // ELIMINA EL PREFIJO ROLE_ PARA COMPATIBILIDAD CON TU BASE DE DATOS
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http, PasswordEncoder passwordEncoder) throws Exception {
+    static GrantedAuthorityDefaults grantedAuthorityDefaults() {
+        return new GrantedAuthorityDefaults(""); 
+    }
+
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http, DaoAuthenticationProvider authenticationProvider) throws Exception {
 
         http
+            .authenticationProvider(authenticationProvider)
             .csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .headers(headers -> headers
+                .frameOptions(f -> f.sameOrigin())
+                .contentTypeOptions(c -> {})
+                .xssProtection(x -> x.disable()) 
+            )
+            // Con server.servlet.context-path=/api las rutas internas son /auth/..., no /api/auth/...
+            // Incluir ambas formas por si el context-path está vacío en otro entorno.
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/login").permitAll()
-                .requestMatchers("/api/auth/init-usuarios").permitAll()
+                // Preflight CORS (navegadores): nunca debe requerir auth
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                .requestMatchers("/auth/login", "/api/auth/login").permitAll()
+                .requestMatchers("/auth/refresh", "/api/auth/refresh").permitAll()
+                .requestMatchers("/auth/init-usuarios", "/api/auth/init-usuarios").permitAll()
                 .requestMatchers("/error").permitAll()
                 .anyRequest().authenticated()
             );
 
+        http.addFilterBefore(loginRateLimitFilter, UsernamePasswordAuthenticationFilter.class);
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -64,22 +92,29 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        List<String> origins = Arrays.stream(corsAllowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://localhost:5500",
-            "http://127.0.0.1:5500"
-        ));
+        // Usamos Bearer token (Authorization), no cookies. Para máxima compatibilidad entre entornos
+        // permitir cualquier origen y NO usar credentials.
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        // ✅ FIX: Especificar headers explícitamente en lugar de wildcard
-        // Wildcard "*" es inválido cuando allowCredentials=true (RFC 6750)
+        
         configuration.setAllowedHeaders(Arrays.asList(
-            "Content-Type",
-            "Authorization",
-            "X-Requested-With",
-            "Accept"
+            "Origin", "Content-Type", "Accept", "Authorization",
+            "X-Requested-With", "Access-Control-Request-Method",
+            "Access-Control-Request-Headers", "Cache-Control",
+            "X-Captura-Como",
+            "X-Filename",
+            "X-Etiqueta-Documento",
+            "X-Numero-Cedula"
         ));
-        configuration.setAllowCredentials(true);
+        
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowCredentials(false);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
